[tool.poetry]
name = "borgbackup-poetry"
version = "0.1.0"
description = "fake project to install and use bord via poetry"
authors = ["JensDiemer <git@jensdiemer.de>"]
license = "GPL"

[tool.poetry.dependencies]
python = ">=3.7,<4.0.0"
borgbackup = {extras = ["fuse"], version = "*"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
